--- a/src/app/profile-setup/crops-or-livestock/finished-setup/finished-setup.page.html
+++ b/src/app/profile-setup/crops-or-livestock/finished-setup/finished-setup.page.html
@@ -7,7 +7,7 @@
       <ion-label class="finished-setup__content--title">Finished Setup</ion-label>
     </div>
     <div class="finished-setup__buttons">
-      <app-button class="solid" name="Get started"></app-button>
+      <app-button class="solid" name="Get started" (click)="getStartedButtonHandlerClick()"></app-button>
       <p routerLink="/profile-setup/crops-or-livestock/select-livestocks">Back</p>
     </div>
   </div>
