--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -79,6 +79,7 @@ p {
 
   --ion-color-gray: #343434;
   --ion-color-gray-light: #605d5d;
+  --ion-color-gradient: linear-gradient(to right, #12ab97, #a7e05f);
 }
 @media (prefers-color-scheme: dark) {
   /*
