--- a/src/app/main/home-screen/home-screen.page.html
+++ b/src/app/main/home-screen/home-screen.page.html
@@ -1,29 +1,38 @@
 <ion-header>
-  <ion-toolbar mode="ios" color="primary">
+  <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Home Screen</ion-title>
+    <ion-title>Home</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="home__header container">
+  <div class="home__header  page-container">
     <div class="home__user">
-      <ion-img class="home__header-logo" src="assets/img/crops/avatar.png"></ion-img>
       <div class="home__user--content">
-        <ion-label class="home__user--content-greetings">Good Afternoon,</ion-label>
-        <ion-label class="home__user--content-name">Jake</ion-label>
+        <ion-label class="home__user--content-greetings">Good Morning, Jake</ion-label>
+        <ion-label class="home__user--content-tips">Today is the perfect time to water your crops.</ion-label>
       </div>
     </div>
     <div class="home__weather">
-      <ion-label class="home__weather-updates"></ion-label>
-      <div class="home__weather-button"></div>
+      <ion-label class="home__weather-updates">Tabon, San Isidro, Nueva Ecija
+        Sunday 9:00 AM
+        Mostly cloudy</ion-label>
+      <div class="home__weather-button">
+        <ion-icon name="sunny-outline"></ion-icon>
+        <span>weather</span>
+        <ion-icon name="chevron-forward-outline"></ion-icon>
+      </div>
     </div>
   </div>
-  <div class="home__content">
+  <div class="home__content page-container">
     <ion-grid>
-      <ion-label class="home__content--title" color="primary">My Crops</ion-label>
+      <div class="home__content--title">
+        <ion-label class="home__content--name" color="primary">Crops</ion-label>
+        <p class="home__content--edit-crops">Edit crops <ion-icon name="chevron-forward-outline"></ion-icon>
+        </p>
+      </div>
       <ion-row>
         <ion-slides [options]="sliderConfig">
           <ion-slide *ngFor="let cropsData of homeDataCrops">
@@ -34,23 +43,20 @@
           </ion-slide>
         </ion-slides>
       </ion-row>
-      <!--
-      <ion-label class="home__content--title" color="primary"
-        >My LiveStock</ion-label
-      >
+      <div class="home__content--title">
+        <ion-label class="home__content--name" color="primary">My LiveStock</ion-label>
+        <p class="home__content--edit-crops">Edit crops <ion-icon name="chevron-forward-outline"></ion-icon>
+      </div>
       <ion-row>
         <ion-slides [options]="sliderConfig">
           <ion-slide *ngFor="let livestockData of homeDataLivestock">
             <ion-col>
-              <app-cards
-                [item]="livestockData"
-                [color]="livestockColors"
-                (click)="onClickLivestockDetails(livestockData.id)"
-              ></app-cards>
+              <app-cards [item]="livestockData" [color]="livestockColors"
+                (click)="onClickLivestockDetails(livestockData.id)"></app-cards>
             </ion-col>
           </ion-slide>
         </ion-slides>
-      </ion-row> -->
+      </ion-row>
     </ion-grid>
   </div>
 </ion-content>
