--- a/src/app/main/profile-screen/profile-screen.page.html
+++ b/src/app/main/profile-screen/profile-screen.page.html
@@ -9,7 +9,7 @@
 
 <ion-content>
   <div class="header">
-    <ion-img src="assets/img/crops/avatar.png"></ion-img>
+    <ion-img src="/img/crops/avatar.png"></ion-img>
     <ion-label>Jake Castor</ion-label>
   </div>
   <div class="content">
