--- a/src/app/main/community-screen/community-screen.page.scss
+++ b/src/app/main/community-screen/community-screen.page.scss
@@ -1,26 +1,27 @@
-.header {
-  display: flex;
-  height: 20vh;
-  width: 100%;
-  box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.4);
-  border-radius: 0 0 25px 25px;
-  align-items: center;
-  padding: 1rem;
-}
-
-.name {
-  display: flex;
-  flex-direction: column;
-  padding-left: 1rem;
-  color: #333;
-}
-.name > ion-label {
-  font-size: 25px;
-  font-weight: bold;
-}
-.header > ion-img {
-  width: 85px;
-  height: 85px;
+.community {
+  &__header {
+    background-image: var(--ion-color-gradient);
+    display: grid;
+    grid-template-columns: max-content 50% 20% 15%;
+    padding: 1rem;
+    justify-content: center;
+    align-items: center;
+  }
+  &__img {
+    width: 10rem;
+  }
+  &__write-post {
+    background-color: #fff;
+    border-radius: 25px;
+    text-align: center;
+    padding: 0.8rem;
+  }
+  &__sort {
+    background-color: #fff;
+    border-radius: 25px;
+    text-align: center;
+    padding: 0.8rem;
+  }
 }
 .comment {
   display: flex;
