--- a/src/app/main/community-screen/community-screen.page.html
+++ b/src/app/main/community-screen/community-screen.page.html
@@ -2,44 +2,75 @@
   <div class="community page-container">
     <app-page-header title="Community"></app-page-header>
     <div class="community__header">
-      <ion-avatar>
-        <img class="community__img" src="assets/img/jake.jpg" alt="">
-      </ion-avatar>
-      <ion-searchbar mode="ios" color="light"></ion-searchbar>
+      <div class="community__avatar">
+        <img class="community__avatar--img" src="assets/img/jake.jpg" alt="">
+        <span class="community__avatar--post">2 posts</span>
+      </div>
+      <ion-searchbar class="community__searchbar" mode="ios" color="light"></ion-searchbar>
       <div class="community__write-post">Write Post <ion-icon name="pencil-outline"></ion-icon>
       </div>
       <div class="community__sort">sort</div>
     </div>
     <div class="community__content">
-      <ion-grid>
-        <ion-row *ngFor="let post of posts">
+      <ion-grid class="ion-no-padding ion-margin-top">
+        <ion-row>
           <ion-col>
-            <ion-card>
-              <ion-card-header>
-                <!-- <ion-img [src]="post.img"></ion-img> -->
-                <ion-card-title>{{post.type}}</ion-card-title>
-              </ion-card-header>
-              <ion-card-content> {{post.message}} </ion-card-content>
+            <div class="card">
+              <div class="card__header">
+                <div class="card__header--details">
+                  <img class="card__header--img" src="assets/img/jake.jpg" />
+                  <div class="card__header--post-details">
+                    <div class="card__header--name">Jake Castor</div>
+                    <span class="card__header--time">2 hours</span>
+                  </div>
+                </div>
+                <div class="card__header--dropdown">
+                  <ion-icon class="card__header--dropdown-icon" name="ellipsis-horizontal-outline"></ion-icon>
+                </div>
+              </div>
+              <img class="card__img" src="assets/img/jake.jpg" />
+              <div class="card__content">
+                <h3>Watermelon</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut harum vel amet dolor facilis? Error
+                  saepe corrupti assumenda, eos</p>
+              </div>
               <div class="comment">
                 <ion-input placeholder="Write a comment"></ion-input>
                 <ion-icon name="chatbox-ellipses-outline"></ion-icon>
               </div>
-              <div class="icons">
-                <!-- <ion-icon
-                (click)="onClickEdit(post.id)"
-                name="create-outline"
-              ></ion-icon> -->
-                <!-- <ion-icon
-                (click)="onClickDelete(post.id)"
-                name="trash-outline"
-              ></ion-icon> -->
+            </div>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <div class="card">
+              <div class="card__header">
+                <div class="card__header--details">
+                  <img class="card__header--img" src="assets/img/jake.jpg" />
+                  <div class="card__header--post-details">
+                    <div class="card__header--name">Jake Castor</div>
+                    <span class="card__header--time">2 hours</span>
+                  </div>
+                </div>
+                <div class="card__header--dropdown">
+                  <ion-icon class="card__header--dropdown-icon" name="ellipsis-horizontal-outline"></ion-icon>
+                </div>
               </div>
-            </ion-card>
+              <img class="card__img" src="assets/img/jake.jpg" />
+              <div class="card__content">
+                <h3>Watermelon</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut harum vel amet dolor facilis? Error
+                  saepe corrupti assumenda, eos</p>
+              </div>
+              <div class="comment">
+                <ion-input placeholder="Write a comment"></ion-input>
+                <ion-icon name="chatbox-ellipses-outline"></ion-icon>
+              </div>
+            </div>
           </ion-col>
         </ion-row>
       </ion-grid>
     </div>
-
     <ion-fab (click)="onClickAddBtn()" vertical="bottom" horizontal="end" slot="fixed">
       <ion-fab-button>
         <ion-icon name="add"></ion-icon>
