--- a/src/app/main/community-screen/community-screen.page.scss
+++ b/src/app/main/community-screen/community-screen.page.scss
@@ -1,28 +1,90 @@
 .community {
   &__header {
     background-image: var(--ion-color-gradient);
-    display: grid;
-    grid-template-columns: max-content 50% 20% 15%;
-    padding: 1rem;
-    justify-content: center;
+    display: flex;
     align-items: center;
+    border-radius: 10px;
+    padding: 0 1rem;
   }
-  &__img {
+  &__avatar {
     width: 10rem;
+    border-radius: 100%;
+    padding: 0.5rem 0;
+    position: relative;
+    margin-right: 0.5rem;
+    &--img {
+      width: auto;
+      object-fit: contain;
+      border-radius: inherit;
+    }
+    &--post {
+      position: absolute;
+      top: 5px;
+      right: -12px;
+      color: #fff;
+      background-color: red;
+      font-weight: bold;
+      font-size: 0.6rem;
+      padding: 0.3rem 0.5rem;
+      border-radius: 25px;
+      z-index: 2;
+    }
   }
-  &__write-post {
-    background-color: #fff;
-    border-radius: 25px;
-    text-align: center;
-    padding: 0.8rem;
-  }
+
+  &__write-post,
   &__sort {
     background-color: #fff;
     border-radius: 25px;
     text-align: center;
-    padding: 0.8rem;
+    padding: 0.8rem 1rem;
+    width: max-content;
+    margin-right: 1rem;
+    white-space: nowrap;
   }
 }
+
+.community__content {
+  overflow: scroll;
+}
+
+.card {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 5px;
+  width: 100%;
+  &__header {
+    padding: 1.6rem 1.6rem 0 1.6rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 2rem;
+    &--details {
+      display: flex;
+      align-items: center;
+    }
+    &--post-details {
+      margin-left: 1rem;
+    }
+    &--img {
+      display: block;
+      width: 5rem;
+      height: 5rem;
+      border-radius: 50%;
+    }
+    &--dropdown-icon {
+      font-size: 2rem;
+    }
+  }
+  &__img {
+    width: 100%;
+    height: 20rem;
+    object-fit: cover;
+  }
+  &__content {
+    margin-bottom: 2rem;
+    padding: 1rem;
+  }
+}
+
 .comment {
   display: flex;
   justify-content: space-between;
