--- a/src/app/main/community-screen/edit/edit.page.html
+++ b/src/app/main/community-screen/edit/edit.page.html
@@ -1,34 +1,20 @@
 <ion-content>
   <div class="container">
-    <div class="title">Edit Post</div>
+    <app-page-header title="Edit Post"></app-page-header>
     <div class="form">
       <ion-item>
         <ion-label position="floating">Title</ion-label>
-        <ion-input
-          type="text"
-          [(ngModel)]="title"
-          [value]="currentTitle"
-        ></ion-input>
+        <ion-input type="text" [(ngModel)]="title" [value]="currentTitle"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Message</ion-label>
-        <ion-input
-          type="text"
-          [(ngModel)]="message"
-          [value]="currentMessage"
-        ></ion-input>
+        <ion-input type="text" [(ngModel)]="message" [value]="currentMessage"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Image</ion-label>
-        <ion-input
-          type="text"
-          [(ngModel)]="image"
-          [value]="currentImg"
-        ></ion-input>
+        <ion-input type="text" [(ngModel)]="image" [value]="currentImg"></ion-input>
       </ion-item>
     </div>
-    <ion-button (click)="onClickBtn()" expand="full" size="large"
-      >Edit</ion-button
-    >
+    <app-button name="Edit" class="solid" (click)="onClickBtn()"></app-button>
   </div>
 </ion-content>
