--- a/src/app/main/home-screen/cards/cards.component.scss
+++ b/src/app/main/home-screen/cards/cards.component.scss
@@ -6,7 +6,7 @@
   height: 184px;
   border-radius: 20px;
   width: 161.67px;
-  row-gap: 1rem;
+  justify-content: space-around;
   &__img {
     width: 60%;
   }
