Fixed livestock data services

--- a/src/app/main/community-screen/community-screen.page.html
+++ b/src/app/main/community-screen/community-screen.page.html
@@ -27,7 +27,7 @@
                   <ion-icon class="card__header--dropdown-icon" name="ellipsis-horizontal-outline"></ion-icon>
                 </div>
               </div>
-              <img class="card__img" src="assets/img/jake.jpg" />
+              <img class="card__img" src="assets/exampleBugsEatingPlants.jpeg" />
               <div class="card__content">
                 <h3>Watermelon</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut harum vel amet dolor facilis? Error
@@ -55,7 +55,7 @@
                   <ion-icon class="card__header--dropdown-icon" name="ellipsis-horizontal-outline"></ion-icon>
                 </div>
               </div>
-              <img class="card__img" src="assets/img/jake.jpg" />
+              <img class="card__img" src="assets/exampleBugsEatingPlants.jpeg" />
               <div class="card__content">
                 <h3>Watermelon</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut harum vel amet dolor facilis? Error
@@ -83,7 +83,7 @@
                   <ion-icon class="card__header--dropdown-icon" name="ellipsis-horizontal-outline"></ion-icon>
                 </div>
               </div>
-              <img class="card__img" src="assets/img/jake.jpg" />
+              <img class="card__img" src="assets/exampleBugsEatingPlants.jpeg" />
               <div class="card__content">
                 <h3>Watermelon</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut harum vel amet dolor facilis? Error
@@ -111,7 +111,7 @@
                   <ion-icon class="card__header--dropdown-icon" name="ellipsis-horizontal-outline"></ion-icon>
                 </div>
               </div>
-              <img class="card__img" src="assets/img/jake.jpg" />
+              <img class="card__img" src="assets/exampleBugsEatingPlants.jpeg" />
               <div class="card__content">
                 <h3>Watermelon</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut harum vel amet dolor facilis? Error
