--- a/src/app/main/farming-method-screen/add/message/message.component.scss
+++ b/src/app/main/farming-method-screen/add/message/message.component.scss
@@ -1,2 +1,8 @@
 .message {
+  font-size: 1.8rem;
+  line-height: 1.6;
+  margin-top: 1rem;
+  color: #2e322f;
+  font-weight: 200;
+  letter-spacing: 1.2px;
 }
