--- a/src/app/auth-page/validation/validation.page.html
+++ b/src/app/auth-page/validation/validation.page.html
@@ -1,5 +1,5 @@
-<ion-content>
-  <section class="validation page-container">
+<ion-content class="ion-padding">
+  <section class="validation">
     <div class="validation__content">
       <header class='validation__header'>
         <h1>Fill up the form</h1>
