--- a/src/app/main/community-screen/community-screen.page.html
+++ b/src/app/main/community-screen/community-screen.page.html
@@ -1,5 +1,5 @@
-<ion-content>
-  <div class="community page-container">
+<ion-content class="ion-padding">
+  <div class="community">
     <app-page-header title="Community"></app-page-header>
     <div class="community__header">
       <div class="community__avatar">
