--- a/src/app/main/farming-method-screen/add/add.page.html
+++ b/src/app/main/farming-method-screen/add/add.page.html
@@ -2,7 +2,7 @@
   <div class="add-farming-method">
     <span class="add-farming-method__publish">Publish</span>
   </div>
-  <div class="add-farming-method__content page-container">
+  <div class="add-farming-method__content ion-padding">
     <div class="add-farming-method__content--item" *ngFor="let data of publishData">
       <app-title [title]="data.title"></app-title>
       <app-message [message]="data.message"></app-message>
