--- a/src/app/main/farming-method-screen/add/modal/modal.component.html
+++ b/src/app/main/farming-method-screen/add/modal/modal.component.html
@@ -20,8 +20,8 @@
   <div class="add-modal__header-button--cancel" (click)="cancel()">Cancel</div>
   <div class="add-modal__header-button--add" (click)="confirm()">Add</div>
 </div>
-<ion-content>
-  <div class="add-modal page-container">
+<ion-content class="ion-padding">
+  <div class="add-modal">
     <div class="add-modal__details">
       <ion-item>
         <ion-label position="stacked">Crops/Livestock</ion-label>
