--- a/src/app/main/farming-method-screen/farming-method-screen.page.html
+++ b/src/app/main/farming-method-screen/farming-method-screen.page.html
@@ -1,5 +1,5 @@
-<ion-content>
-  <div class="farming-method page-container">
+<ion-content class="ion-padding">
+  <div class="farming-method">
     <app-page-header title="Farming Method"></app-page-header>
     <div class="farming-method__items">
       <div class="farming-method__item">
