--- a/src/app/main/home-screen/home-screen.page.html
+++ b/src/app/main/home-screen/home-screen.page.html
@@ -7,8 +7,8 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <div class="home__header  page-container">
+<ion-content class="ion-padding">
+  <div class="home__header">
     <div class="home__user">
       <div class="home__user--content">
         <ion-label class="home__user--content-greetings">Good Morning, Jake</ion-label>
@@ -26,7 +26,7 @@
       </div>
     </div>
   </div>
-  <div class="home__content page-container">
+  <div class="home__content ion-padding">
     <ion-grid>
       <div class="home__content--title">
         <ion-label class="home__content--name" color="primary">Crops</ion-label>
