--- a/src/app/profile-setup/add-image/add-image.page.html
+++ b/src/app/profile-setup/add-image/add-image.page.html
@@ -1,5 +1,5 @@
-<ion-content>
-  <div class="add-image page-container">
+<ion-content class="ion-padding">
+  <div class="add-image">
     <div class="add-image__header">
       <h1 class="add-image__title">Welcome, Jake</h1>
       <p class="add-image__message">Add photos so that other users can know you</p>
