--- a/src/app/profile-setup/crops-or-livestock/crops-or-livestock.page.html
+++ b/src/app/profile-setup/crops-or-livestock/crops-or-livestock.page.html
@@ -1,5 +1,5 @@
-<ion-content>
-  <div class="crops-or-livestock page-container">
+<ion-content class="ion-padding">
+  <div class="crops-or-livestock">
     <div class="crops-or-livestock__choices">
       <div class="crops-or-livestock__choices--crops" (click)="cropsHandlerClick()"
         [class.selected-item]="isCropsSelected">
