--- a/src/app/profile-setup/crops-or-livestock/finished-setup/finished-setup.page.html
+++ b/src/app/profile-setup/crops-or-livestock/finished-setup/finished-setup.page.html
@@ -1,5 +1,5 @@
-<ion-content>
-  <div class="finished-setup page-container">
+<ion-content class="ion-padding">
+  <div class="finished-setup">
     <div class="finished-setup__content">
       <div class="finished-setup__logo">
         <ion-icon class="finished-setup__icon" name="checkmark-outline"></ion-icon>
