--- a/src/app/profile-setup/crops-or-livestock/select-crops/select-crops.page.html
+++ b/src/app/profile-setup/crops-or-livestock/select-crops/select-crops.page.html
@@ -1,5 +1,5 @@
-<ion-content>
-  <div class="select-crops page-container">
+<ion-content class="ion-padding">
+  <div class="select-crops">
     <h1>Select crops:</h1>
     <ul class="select-crops__items">
       <li class="select-crops__items--list" *ngFor="let crop of crops" (click)="selectCropHandlerClick(crop.name)"
