--- a/src/app/profile-setup/crops-or-livestock/select-livestocks/select-livestocks.page.html
+++ b/src/app/profile-setup/crops-or-livestock/select-livestocks/select-livestocks.page.html
@@ -1,5 +1,5 @@
-<ion-content>
-  <div class="select-livestock page-container">
+<ion-content class="ion-padding">
+  <div class="select-livestock">
     <h1>Select livestock:</h1>
     <ul class="select-livestock__items">
       <li class="select-livestock__items--list" *ngFor="let livestock of livestocks"
