--- a/src/app/auth-page/log-in/log-in.page.html
+++ b/src/app/auth-page/log-in/log-in.page.html
@@ -1,13 +1,27 @@
-<ion-content>
-  <section class="log-in page-container">
+<ion-content class='ion-padding'>
+  <section class="log-in">
     <div class="log-in__content">
       <app-page-header title="Log In"></app-page-header>
-      <form action="#" class="log-in__form">
-        <app-input-field inputPlaceholder="Email"></app-input-field>
-        <app-input-field inputPlaceholder="Password"></app-input-field>
-      </form>
-      <app-button class="solid" name="Login" (click)="loginClickHandler()"></app-button>
-      <p class="ion-text-center">New User? <span [routerLink]="['/auth-page/sign-up']">Sign Up</span></p>
+      <ion-grid>
+        <ion-row>
+          <ion-col size-sm="8" offset-sm="2">
+            <ion-item>
+              <ion-label position="floating">Email</ion-label>
+              <ion-input type="email" ngModel name="email" required email></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating">Password</ion-label>
+              <ion-input type="password" ngModel name="password" required minlength="6"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size-sm="8" offset-sm="2">
+            <app-button class="solid" name="Login" (click)="loginClickHandler()"></app-button>
+            <p class="ion-text-center">New User? <span [routerLink]="['/auth-page/sign-up']">Sign Up</span></p>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
     </div>
   </section>
 </ion-content>
