--- a/src/app/auth-page/register/register.page.html
+++ b/src/app/auth-page/register/register.page.html
@@ -1,7 +1,7 @@
 <ion-content>
   <div class="register ">
     <ion-img src="assets/img/register/welcome pic.webp"></ion-img>
-    <div class="register__content page-container">
+    <div class="register__content ion-padding">
       <ion-grid>
         <ion-row>
           <ion-col class="ion-margin-top:-10px">
