--- a/src/app/UI/button/button.component.scss
+++ b/src/app/UI/button/button.component.scss
@@ -4,6 +4,7 @@ button {
   font-size: 16px;
   height: 50px;
   width: 100%;
+  
 }
 
 button:hover {
@@ -23,4 +24,8 @@ button:hover {
   margin-right: 2rem;
   padding: 0 2rem;
   width: fit-content;
+}
+
+.isValid{
+  background-image: linear-gradient(to right, #CBCCCB, #CBCCCB);
 }
