--- a/src/app/auth-page/sign-up/sign-up.page.scss
+++ b/src/app/auth-page/sign-up/sign-up.page.scss
@@ -1,6 +1,7 @@
 .sign-up {
   margin-bottom: 1rem;
 
+
   & p {
     margin-bottom: 2rem;
     color: #b4bbb4;
@@ -9,5 +10,9 @@
     color: #5cb85c;
     font-weight: bold;
     text-decoration: underline;
+  }
+  &__error {
+    transform: translateY(1rem);
+    color: #d9534f !important;
   }
 }
